[package]
name = "parallel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
diesel = []
sqlx = []
actix = []
axum = []

[dependencies]
diesel = { version = "2.1.0",features = ["postgres", "serde_json", "time", "64-column-tables"]}
async-bb8-diesel = { git = "https://github.com/oxidecomputer/async-bb8-diesel", rev = "be3d9bce50051d8c0e0c06078e8066cc27db3001" }
async-trait = "0.1.63"
bb8 = "0.8"
dotenvy = "0.15"
actix-web = "4.3.0"
tokio-diesel = "0.3.0"
bb8-diesel = "0.2.1"
sqlx = { version = "0.6.2", features = ["postgres", "time", "runtime-actix-native-tls", "json"] }
once_cell = "1.17.1"
serde_json = "1.0.103"
serde = { version = "1.0.173", features = ["derive"] }
time = { version = "0.3.23", features = ["serde", "serde-well-known", "std"] }
actix-rt = "2.8.0"
futures = "0.3.28"
env_logger = "0.10.0"
tokio = { version = "1.3", features = ["full"] }
axum = "0.6.20"
[[bin]]
name = "dbbench"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
